# TFCStreamManager-Linux

./: Cargo.toml  DEVELOPMENT.md  README.md  player_overlay.html  player_overlay_team.html
.github/workflows/: build.yml  ci.yml
src/: main.rs
src/models/: discipline.rs  match_data.rs  match_entry.rs  mod.rs  overlay_content.rs  paginated_response.rs  score_update.rs  table.rs  tournament.rs
src/services/: api.rs  mod.rs  obs_service.rs  overlay_state.rs  service_discovery.rs  settings.rs  table_monitor.rs  web_server.rs
src/ui/: debug_log.rs  debug_window.rs  main_window.rs  mod.rs  settings_dialog.rs
src/ui/main_window/: actions.rs  mod.rs  panels.rs  wiring.rs
