[package]
name = "tfc_stream_manager"
version = "1.0.0"
edition = "2024"
authors = ["Ben Fritsch"]
description = "Linux desktop application for managing streaming overlays for table football tournaments"

[dependencies]
anyhow = "1.0.100"
axum = "0.8.8"
base64 = "0.22.1"
chrono = { version = "0.4.42", features = ["serde"] }
directories = "6.0.0"
glib = "0.21.5"
gtk4 = "0.10.3"
hostname = "0.4.2"
if-addrs = "0.14"
keyring = { version = "3.6.3", features = ["sync-secret-service"] }
mdns-sd = "0.17.1"
reqwest = { version = "0.13.1", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "2.0.17"
tokio = { version = "1.49.0", features = ["full"] }
tower-http = { version = "0.6.8", features = ["cors"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
