[package]
name = "tfc_stream_manager"
version = "1.0.0"
edition = "2024"
authors = ["Ben Fritsch"]
description = "Linux desktop application for managing streaming overlays for table football tournaments"

[dependencies]
anyhow = "1.0.102"
axum = "0.8.8"
base64 = "0.22"
chrono = { version = "0.4.44", features = ["serde"] }
directories = "6.0.0"
futures-channel = "0.3.32"
futures-util = "0.3"
glib = "0.22.7"
gtk4 = "0.11.3"
hostname = "0.4.2"
if-addrs = "0.15"
keyring = { version = "3.6.3", features = ["sync-secret-service"] }
mdns-sd = "0.20.1"
reqwest = { version = "0.13.4", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sha2 = "0.10.9"
thiserror = "2.0.18"
tokio = { version = "1.51.1", features = ["full"] }
tokio-tungstenite = { version = "0.28", features = ["native-tls"] }
tower-http = { version = "0.7.0", features = ["cors"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
